--- a/notebooks/evals/qa.ipynb
+++ b/notebooks/evals/qa.ipynb
@@ -2,14 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6dbb3396",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "92275cab",
    "metadata": {},
@@ -183,11 +175,56 @@
     "    answer: str = dspy.OutputField(description=\"The answer to the question.\")\n",
     "\n",
     "class RAGSystem(dspy.Module):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, collection: Any):\n",
     "        self.generate_answer = dspy.Predict(GenerateAnswer)\n",
+    "        self.collection = collection\n",
     "\n",
-    "    def __call__(self, question: str, context: list[str] | list[dspy.Image]) -> str:\n",
-    "        pass\n"
+    "    def _get_objects(self, question: str, images_or_text: Literal[\"image\", \"text\"]) -> list[str] | list[dspy.Image]:\n",
+    "        if images_or_text == \"image\":\n",
+    "            response = self.collection.query.hybrid(\n",
+    "                query=question,\n",
+    "                return_properties=[\"base64_str\"],\n",
+    "                limit=5\n",
+    "            )\n",
+    "            objects = []\n",
+    "            for o in response.objects:\n",
+    "                objects.append(o.properties[\"base64_str\"])\n",
+    "            # do PIL magic and convert these to dspy.Image objects\n",
+    "            return objects\n",
+    "        elif images_or_text == \"text\":\n",
+    "            pass\n",
+    "        \n",
+    "    def _fetch_oracle_context(\n",
+    "        collection: Any, \n",
+    "        pdf_id: str, \n",
+    "        return_image_or_text: Literal[\"image\", \"text\"]\n",
+    "    ) -> str | dspy.Image:\n",
+    "        if return_image_or_text == \"image\":\n",
+    "            response = collection.query.fetch_objects(\n",
+    "                filters=Filter.by_property(\"dataset_id\").like(pdf_id),\n",
+    "                return_properties=[\"base64_str\"]\n",
+    "            )\n",
+    "            return response.objects[0].properties[\"base64_str\"]\n",
+    "        elif return_image_or_text == \"text\":\n",
+    "            response = collection.query.fetch_objects(\n",
+    "                filters=Filter.by_property(\"dataset_id\").like(pdf_id),\n",
+    "                return_properties=[\"content\"]\n",
+    "            )\n",
+    "            return response.objects[0].properties[\"content\"]\n",
+    "\n",
+    "    def __call__(\n",
+    "        self, \n",
+    "        question: str, \n",
+    "        context: list[str] | list[dspy.Image],\n",
+    "        oracle_context_id: str = None\n",
+    "    ) -> str:\n",
+    "        if oracle_context is None:\n",
+    "            context = self._get_objects(question, \"text\")\n",
+    "        else:\n",
+    "            context = self._fetch_oracle_context(oracle_context_id)\n",
+    "        return self.generate_answer(question=question, context=context)\n",
+    "\n",
+    "\n"
    ]
   },
   {
