--- a/notebooks/evals/qa.ipynb
+++ b/notebooks/evals/qa.ipynb
@@ -175,39 +175,46 @@
     "    answer: str = dspy.OutputField(description=\"The answer to the question.\")\n",
     "\n",
     "class RAGSystem(dspy.Module):\n",
-    "    def __init__(self, collection: Any):\n",
+    "    def __init__(self, collection: Any, images_or_text: Literal[\"image\", \"text\"], k: int = 5):\n",
     "        self.generate_answer = dspy.Predict(GenerateAnswer)\n",
     "        self.collection = collection\n",
-    "\n",
-    "    def _get_objects(self, question: str, images_or_text: Literal[\"image\", \"text\"]) -> list[str] | list[dspy.Image]:\n",
-    "        if images_or_text == \"image\":\n",
+    "        self.images_or_text = images_or_text\n",
+    "        self.k = k\n",
+    "    def _get_objects(self, question: str) -> list[str] | list[dspy.Image]:\n",
+    "        if self.images_or_text == \"image\":\n",
     "            response = self.collection.query.hybrid(\n",
     "                query=question,\n",
     "                return_properties=[\"base64_str\"],\n",
-    "                limit=5\n",
+    "                limit=self.k\n",
     "            )\n",
     "            objects = []\n",
     "            for o in response.objects:\n",
     "                objects.append(o.properties[\"base64_str\"])\n",
     "            # do PIL magic and convert these to dspy.Image objects\n",
     "            return objects\n",
-    "        elif images_or_text == \"text\":\n",
-    "            pass\n",
+    "        elif self.images_or_text == \"text\":\n",
+    "            response = self.collection.query.hybrid(\n",
+    "                query=question,\n",
+    "                return_properties=[\"content\"],\n",
+    "                limit=self.k\n",
+    "            )\n",
+    "            objects = []\n",
+    "            for o in response.objects:\n",
+    "                objects.append(o.properties[\"content\"])\n",
+    "            return objects\n",
     "        \n",
     "    def _fetch_oracle_context(\n",
-    "        collection: Any, \n",
-    "        pdf_id: str, \n",
-    "        return_image_or_text: Literal[\"image\", \"text\"]\n",
+    "        oracle_context_id: str, \n",
     "    ) -> str | dspy.Image:\n",
-    "        if return_image_or_text == \"image\":\n",
+    "        if self.images_or_text == \"image\":\n",
     "            response = collection.query.fetch_objects(\n",
-    "                filters=Filter.by_property(\"dataset_id\").like(pdf_id),\n",
+    "                filters=Filter.by_property(\"dataset_id\").like(oracle_context_id),\n",
     "                return_properties=[\"base64_str\"]\n",
     "            )\n",
     "            return response.objects[0].properties[\"base64_str\"]\n",
-    "        elif return_image_or_text == \"text\":\n",
+    "        elif self.images_or_text == \"text\":\n",
     "            response = collection.query.fetch_objects(\n",
-    "                filters=Filter.by_property(\"dataset_id\").like(pdf_id),\n",
+    "                filters=Filter.by_property(\"dataset_id\").like(oracle_context_id),\n",
     "                return_properties=[\"content\"]\n",
     "            )\n",
     "            return response.objects[0].properties[\"content\"]\n",
@@ -218,13 +225,11 @@
     "        context: list[str] | list[dspy.Image],\n",
     "        oracle_context_id: str = None\n",
     "    ) -> str:\n",
-    "        if oracle_context is None:\n",
-    "            context = self._get_objects(question, \"text\")\n",
+    "        if oracle_context_id is None:\n",
+    "            context = self._get_objects(question)\n",
     "        else:\n",
     "            context = self._fetch_oracle_context(oracle_context_id)\n",
-    "        return self.generate_answer(question=question, context=context)\n",
-    "\n",
-    "\n"
+    "        return self.generate_answer(question=question, context=context)"
    ]
   },
   {
