--- a/notebooks/evals/qa.ipynb
+++ b/notebooks/evals/qa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "92275cab",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "06a45dd1",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
      "output_type": "stream",
      "text": [
       "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pydantic/main.py:463: UserWarning: Pydantic serializer warnings:\n",
-      "  PydanticSerializationUnexpectedValue(Expected 9 fields but got 6: Expected `Message` - serialized value may not be as expected [input_value=Message(content='Hello! H...: None}, annotations=[]), input_type=Message])\n",
+      "  PydanticSerializationUnexpectedValue(Expected 9 fields but got 6: Expected `Message` - serialized value may not be as expected [input_value=Message(content='Hello! ...: None}, annotations=[]), input_type=Message])\n",
       "  PydanticSerializationUnexpectedValue(Expected `StreamingChoices` - serialized value may not be as expected [input_value=Choices(finish_reason='st...ider_specific_fields={}), input_type=Choices])\n",
       "  return self.__pydantic_serializer__.to_python(\n"
      ]
@@ -35,10 +35,10 @@
     {
      "data": {
       "text/plain": [
-       "['Hello! How can I help you today? 😊']"
+       "['Hello! 😊 How can I help you today?']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,12 +99,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "df0c2fe1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# define RAG systems\n",
+    "import base64\n",
+    "from io import BytesIO\n",
+    "from PIL import Image\n",
     "from typing import Any, Literal\n",
     "from weaviate.classes.query import Filter\n",
     "\n",
@@ -116,22 +119,24 @@
     "    answer: str = dspy.OutputField(description=\"The answer to the question.\")\n",
     "\n",
     "class RAGSystem(dspy.Module):\n",
-    "    def __init__(self, collection: Any, images_or_text: Literal[\"image\", \"text\"], k: int = 5):\n",
+    "    def __init__(self, collection: Any, images_or_text: Literal[\"images\", \"text\"], k: int = 5):\n",
     "        self.generate_answer = dspy.Predict(GenerateAnswer)\n",
     "        self.collection = collection\n",
     "        self.images_or_text = images_or_text\n",
     "        self.k = k\n",
     "    def _get_objects(self, question: str) -> list[str] | list[dspy.Image]:\n",
-    "        if self.images_or_text == \"image\":\n",
-    "            response = self.collection.query.hybrid(\n",
+    "        if self.images_or_text == \"images\":\n",
+    "            response = self.collection.query.near_text(\n",
     "                query=question,\n",
     "                return_properties=[\"base64_str\"],\n",
     "                limit=self.k\n",
     "            )\n",
     "            objects = []\n",
     "            for o in response.objects:\n",
-    "                objects.append(o.properties[\"base64_str\"])\n",
-    "            # do PIL magic and convert these to dspy.Image objects\n",
+    "                b64_str = o.properties[\"base64_str\"]\n",
+    "                decoded_b64 = base64.b64decode(b64_str)\n",
+    "                pil_image = Image.open(BytesIO(decoded_b64))\n",
+    "                objects.append(dspy.Image(pil_image))\n",
     "            return objects\n",
     "        elif self.images_or_text == \"text\":\n",
     "            response = self.collection.query.hybrid(\n",
@@ -148,12 +153,15 @@
     "        self,\n",
     "        oracle_context_id: str, \n",
     "    ) -> str | dspy.Image:\n",
-    "        if self.images_or_text == \"image\":\n",
+    "        if self.images_or_text == \"images\":\n",
     "            response = self.collection.query.fetch_objects(\n",
     "                filters=Filter.by_property(\"dataset_id\").like(oracle_context_id),\n",
     "                return_properties=[\"base64_str\"]\n",
     "            )\n",
-    "            return response.objects[0].properties[\"base64_str\"]\n",
+    "            b64_str = response.objects[0].properties[\"base64_str\"]\n",
+    "            decoded_b64 = base64.b64decode(b64_str)\n",
+    "            pil_image = Image.open(BytesIO(decoded_b64))\n",
+    "            return dspy.Image(pil_image)\n",
     "            \n",
     "        elif self.images_or_text == \"text\":\n",
     "            response = self.collection.query.fetch_objects(\n",
@@ -176,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "id": "68a3c1de",
    "metadata": {},
    "outputs": [
@@ -184,21 +192,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pydantic/main.py:463: UserWarning: Pydantic serializer warnings:\n",
-      "  PydanticSerializationUnexpectedValue(Expected 9 fields but got 6: Expected `Message` - serialized value may not be as expected [input_value=Message(content='[[ ## an...: None}, annotations=[]), input_type=Message])\n",
-      "  PydanticSerializationUnexpectedValue(Expected `StreamingChoices` - serialized value may not be as expected [input_value=Choices(finish_reason='st...ider_specific_fields={}), input_type=Choices])\n",
-      "  return self.__pydantic_serializer__.to_python(\n"
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/weaviate/warnings.py:302: ResourceWarning: Con004: The connection to Weaviate was not closed properly. This can lead to memory leaks.\n",
+      "            Please make sure to close the connection using `client.close()`.\n",
+      "  warnings.warn(\n",
+      "/var/folders/41/8dp_379x15d8zz4ppsjthdw40000gn/T/ipykernel_96876/304557697.py:8: ResourceWarning: unclosed <ssl.SSLSocket fd=1123, family=AddressFamily.AF_INET, type=SocketKind.SOCK_STREAM, proto=0, laddr=('10.0.0.233', 55535), raddr=('3.78.128.217', 443)>\n",
+      "  rag_system = RAGSystem(collection, \"images\")\n",
+      "ResourceWarning: Enable tracemalloc to get the object allocation traceback\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "Prediction(\n",
-       "    answer='HyDE stands for \"Hypothetical Document Embeddings.\" It is a method designed to build effective dense information retrievers in a completely unsupervised way, without relying on relevance labels or supervised fine-tuning. The core idea is to combine two types of models:\\n\\n1. **A generative, instruction-following language model (e.g., InstructGPT, GPT-3):** For each search query, the language model is tasked with generating a hypothetical document that would answer the query — even if it\\'s not a real document and may include imaginary or hallucinated content. The goal is for this generated text to closely resemble something relevant to the query.\\n\\n2. **A contrastive text encoder (e.g., Contriever, mContriever):** This encoder then converts the hypothetical document into a dense vector embedding. This embedding is compared—using inner product similarity—to the embeddings of all real documents in the search corpus.\\n\\nThe top-ranked (most similar) real documents are retrieved and presented as search results.\\n\\n**Key features of HyDE:**\\n- **No Supervision Needed:** It requires no labeled relevance data or supervised training.\\n- **Works \"Out of the Box\":** Both the generative and encoding models are used as-is, without additional fine-tuning.\\n- **Flexible and General-purpose:** It works well for various search tasks, including those in different languages and low-resource domains.\\n- **Performance:** Experiments show that HyDE often outperforms previous unsupervised dense retrievers and is competitive with some fine-tuned models.\\n- **Intended Use:** HyDE is especially useful in scenarios where no relevance data is available — for instance, the early stages of search system deployment or for handling new, unseen types of queries.\\n\\nThe name HyDE refers to the process of generating a \"hypothetical\" document for each query, which is then embedded and used as a proxy to find relevant documents via dense retrieval.\\n\\n**How It Works (Simplified):**\\n1. Input query → LLM writes a hypothetical document that answers the query.\\n2. That document is encoded into a vector.\\n3. The vector is used to search for the most similar real documents by comparing vectors.\\n4. The most similar (according to inner product similarity) documents are retrieved as the answer set.\\n\\nHyDE thus leverages advances in generative LLMs and contrastive encoders to sidestep the need for relevance labels, offering strong zero-shot retrieval performance.'\n",
+       "    answer='HyDE stands for Hypothetical Document Embeddings. It is a novel approach for building effective dense retrievers in information retrieval without needing any labeled data for relevance. Instead of relying on annotated examples of which documents are relevant to which queries, HyDE uses large language models (LLMs) like InstructGPT to generate \"hypothetical\" answers to a query—i.e., a plausible document that would answer the query—without requiring this generated document to be factually correct or real.\\n\\nThe dense retriever then encodes these generated hypothetical documents using an unsupervised contrastive encoder (like Contriever or mContriever), and compares them to real documents encoded in the same way. This similarity search retrieves the most relevant real documents in response to the query. \\n\\nHyDE has two main steps:\\n1. For a given query, prompt the LLM to generate a hypothetical document answering the question.\\n2. Use an unsupervised retriever to encode and compare this generated document to the corpus, retrieving the most similar real documents.\\n\\nHyDE does not require any fine-tuning or adaptation of the models; it works \"out of the box.\" It separates dense retrieval into generative and retrieval stages, leveraging LLMs\\' ability to generate relevant textual examples and dense retrievers\\' ability to measure document similarity. HyDE is shown to outperform previous zero-shot and unsupervised methods, and can be especially effective at the early stages of building a retrieval system, before any relevance labels are available.'\n",
        ")"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,58 +219,16 @@
     "    auth_credentials=weaviate.auth.AuthApiKey(os.environ[\"WEAVIATE_API_KEY\"])\n",
     ")\n",
     "\n",
-    "collection = weaviate_client.collections.get(\"IRPapersText_Default\")\n",
+    "collection = weaviate_client.collections.get(\"IRPapersImages_Default\")\n",
     "\n",
-    "rag_system = RAGSystem(collection, \"text\")\n",
+    "rag_system = RAGSystem(collection, \"images\")\n",
     "\n",
     "rag_system(question=\"What is HyDE?\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "34f1b65a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1_1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pydantic/main.py:463: UserWarning: Pydantic serializer warnings:\n",
-      "  PydanticSerializationUnexpectedValue(Expected 9 fields but got 6: Expected `Message` - serialized value may not be as expected [input_value=Message(content='[[ ## an...: None}, annotations=[]), input_type=Message])\n",
-      "  PydanticSerializationUnexpectedValue(Expected `StreamingChoices` - serialized value may not be as expected [input_value=Choices(finish_reason='st...ider_specific_fields={}), input_type=Choices])\n",
-      "  return self.__pydantic_serializer__.to_python(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Prediction(\n",
-       "    answer='GPT-3.5 generated query variants achieved up to 71.1% overlap in document pooling at depth 100 compared to human-generated variants in the UQV100 test collection.'\n",
-       ")"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "question, oracle_context_id = queries[0][\"question\"], str(queries[0][\"dataset_id\"])\n",
-    "\n",
-    "rag_system(question=question, oracle_context_id=oracle_context_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "id": "8b06a52d",
    "metadata": {},
    "outputs": [
@@ -324,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "id": "81134a28",
    "metadata": {},
    "outputs": [
@@ -345,7 +313,7 @@
        "   'image_tokens': None}}}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "id": "0ded2d00",
    "metadata": {},
    "outputs": [],
@@ -372,60 +340,27 @@
    "execution_count": null,
    "id": "4f34d70c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1_1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pydantic/main.py:463: UserWarning: Pydantic serializer warnings:\n",
-      "  PydanticSerializationUnexpectedValue(Expected 9 fields but got 6: Expected `Message` - serialized value may not be as expected [input_value=Message(content='[[ ## an...: None}, annotations=[]), input_type=Message])\n",
-      "  PydanticSerializationUnexpectedValue(Expected `StreamingChoices` - serialized value may not be as expected [input_value=Choices(finish_reason='st...ider_specific_fields={}), input_type=Choices])\n",
-      "  return self.__pydantic_serializer__.to_python(\n",
-      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/pydantic/main.py:463: UserWarning: Pydantic serializer warnings:\n",
-      "  PydanticSerializationUnexpectedValue(Expected 9 fields but got 6: Expected `Message` - serialized value may not be as expected [input_value=Message(content='[[ ## sc...: None}, annotations=[]), input_type=Message])\n",
-      "  PydanticSerializationUnexpectedValue(Expected `StreamingChoices` - serialized value may not be as expected [input_value=Choices(finish_reason='st...ider_specific_fields={}), input_type=Choices])\n",
-      "  return self.__pydantic_serializer__.to_python(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1_2\n",
-      "1_3\n",
-      "1_4\n",
-      "Processed 5 queries in 25.57102084159851 seconds...\n",
-      "1_5\n",
-      "2_1\n",
-      "2_2\n",
-      "2_3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "alignment_scores, input_tokens, output_tokens = [], [], []\n",
+    "import numpy as np\n",
+    "\n",
+    "alignment_scores = np.array([], dtype=np.float32)\n",
+    "input_tokens = np.array([], dtype=np.float32)\n",
+    "output_tokens = np.array([], dtype=np.float32)\n",
     "\n",
     "K = 3\n",
     "\n",
+    "rag_system = RAGSystem(collection, \"images\", k=5)\n",
+    "\n",
     "start = time.time()\n",
     "for idx, query in enumerate(queries):\n",
-    "    if idx % 5 == 4:\n",
-    "        print(f\"Processed {idx+1} queries in {time.time() - start} seconds...\")\n",
     "    test_query, ground_truth_answer, oracle_context_id = query[\"question\"], query[\"answer\"], str(query[\"dataset_id\"])\n",
     "    qa_system_response = rag_system(\n",
     "        question=test_query,\n",
-    "        oracle_context_id=oracle_context_id\n",
     "    )\n",
     "    usage_dict = qa_system_response.get_lm_usage()[\"openai/gpt-4.1\"]\n",
-    "    input_tokens.append(usage_dict[\"prompt_tokens\"])\n",
-    "    output_tokens.append(usage_dict[\"completion_tokens\"])\n",
+    "    input_tokens = np.append(input_tokens, usage_dict[\"prompt_tokens\"])\n",
+    "    output_tokens = np.append(output_tokens, usage_dict[\"completion_tokens\"])\n",
     "\n",
     "    ensemble_votes = 0\n",
     "    for judge_predictions in range(K):\n",
@@ -437,14 +372,16 @@
     "        if lm_judge_response.score:\n",
     "            ensemble_votes += 1\n",
     "    if ensemble_votes >= K / 2:\n",
-    "        alignment_scores.append(1)\n",
+    "        alignment_scores = np.append(alignment_scores, 1)\n",
     "    else:\n",
-    "        alignment_scores.append(0)\n",
+    "        alignment_scores = np.append(alignment_scores, 0)\n",
     "\n",
-    "alignment_scores = np.array(alignment_scores)\n",
-    "input_tokens = np.array(input_tokens)\n",
-    "output_tokens = np.array(output_tokens)\n",
-    "\n",
+    "    if idx % 5 == 4:\n",
+    "        print(f\"Processed {idx+1} queries in {time.time() - start} seconds...\")\n",
+    "        print(\"Alignment score running mean:\", alignment_scores.mean())\n",
+    "        print(\"Input tokens running mean:\", input_tokens.mean())\n",
+    "        print(\"Output tokens running mean:\", output_tokens.mean())\n",
+    "        \n",
     "print(alignment_scores.mean())\n",
     "print(input_tokens.mean())\n",
     "print(output_tokens.mean())\n"
@@ -452,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "id": "1713851d",
    "metadata": {},
    "outputs": [
@@ -460,9 +397,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.17647058823529413\n",
-      "170.28846153846155\n",
-      "123.32692307692308\n"
+      "0.6923076923076923\n",
+      "5199.596153846154\n",
+      "178.1153846153846\n"
      ]
     }
    ],
