--- a/notebooks/data-creation/irpapers-page-encoding.ipynb
+++ b/notebooks/data-creation/irpapers-page-encoding.ipynb
@@ -183,7 +183,6 @@
     "import os\n",
     "import io\n",
     "import csv\n",
-    "from pathlib import Path\n",
     "from base64 import b64encode\n",
     "import fitz  # PyMuPDF\n",
     "\n",
@@ -207,7 +206,7 @@
     "    mat = fitz.Matrix(zoom, zoom)\n",
     "    try:\n",
     "        doc = fitz.open(pdf_file)\n",
-    "    except Exception as e:\n",
+    "    except Exception:\n",
     "        # Optionally, could log or yield an error object here\n",
     "        return []\n",
     "    pages_result = []\n",
