--- a/notebooks/data-creation/irpapers-text.ipynb
+++ b/notebooks/data-creation/irpapers-text.ipynb
@@ -169,7 +169,7 @@
     "    # Collapse output if too long\n",
     "    if len(lines) > max_lines:\n",
     "        summary = \"\\n\".join(lines[:max_lines])\n",
-    "        summary += f\"\\n\\n<details><summary>Show more...</summary>\\n\\n\" + \"\\n\".join(lines[max_lines:]) + \"\\n</details>\"\n",
+    "        summary += \"\\n\\n<details><summary>Show more...</summary>\\n\\n\" + \"\\n\".join(lines[max_lines:]) + \"\\n</details>\"\n",
     "        display(Markdown(summary))\n",
     "    else:\n",
     "        display(Markdown(text))\n",
