--- a/notebooks/eda/financebench-test.ipynb
+++ b/notebooks/eda/financebench-test.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "import fitz\n",
-    "from base64 import b64encode, b64decode\n",
+    "from base64 import b64encode\n",
     "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "import csv\n",
     "from datasets import load_dataset\n",
@@ -36,8 +36,7 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "import requests\n",
-    "import time\n",
-    "from urllib.parse import urlparse"
+    "import time"
    ]
   },
   {
@@ -176,7 +175,7 @@
     "    \n",
     "    # Summary\n",
     "    print(\"\\n\" + \"=\"*60)\n",
-    "    print(f\"Download Summary:\")\n",
+    "    print(\"Download Summary:\")\n",
     "    print(f\"  Total: {total_urls} | Successful: {len(successful_downloads)} | Failed: {len(failed_downloads)}\")\n",
     "    print(\"=\"*60)\n",
     "    \n",
@@ -360,7 +359,7 @@
     "    \n",
     "    # Summary\n",
     "    print(\"\\n\" + \"=\"*60)\n",
-    "    print(f\"Processing Summary:\")\n",
+    "    print(\"Processing Summary:\")\n",
     "    print(f\"  Total PDFs: {len(pdf_files)}\")\n",
     "    print(f\"  Successfully processed: {len(all_results)}\")\n",
     "    print(f\"  Failed: {len(failed_to_open)}\")\n",
@@ -939,7 +938,6 @@
     "    # Drop and create (reset) the collection in Weaviate\n",
     "    weaviate_collection = drop_and_create_collection(collection_name)\n",
     "\n",
-    "    import time\n",
     "    start_time = time.time()\n",
     "    # Upload all pages of this PDF to Weaviate\n",
     "    upload_pdfs_to_weaviate(weaviate_collection, pdf_with_page_num)\n",
