--- a/notebooks/evals/qa.ipynb
+++ b/notebooks/evals/qa.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "92275cab",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import stuff\n",
+    "import os\n",
     "import numpy as np\n",
     "import time\n",
     "\n",
